Usability improvements; no longer animates, #1678 and #1679 fixed. Vertical & scrollbar mode also fixed.
svn changeset:4847/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/slider/slider.css
+++ b/WebContent/ITMILL/themes/default/slider/slider.css
@@ -3,7 +3,8 @@
   --------------------------*/
 
 .i-slider {
-	border: 1px solid #cccfd0;
+	border-top: 1px solid #cccfd0;
+	border-bottom: 1px solid #cccfd0;
 	height: 3px;
 	margin: 5px 0;
 }
@@ -12,6 +13,9 @@
 	height: 2px;
 	border-top: 1px solid #cbcdce;
 	background: #f3f3f4;
+	border-left: 1px solid #cccfd0;
+	border-right: 1px solid #cccfd0;
+	
 }
 .i-slider-handle {
 	background: transparent url(img/handle-horizontal.png);
@@ -24,6 +28,17 @@
 .i-slider-handle:hover {
 	background-position: left bottom;
 }
+
+.i-slider-scrollbar .i-slider-handle,
+.i-slider-scrollbar.i-slider-vertical .i-slider-handle {
+	background: #ffffff;
+	border: 1px solid #cccfd0;
+	border-radius: 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	
+}
+
 /* TODO
 .i-slider-bigger {
 	background: #dde4ef url(img/arrow-right.png);
@@ -61,11 +76,17 @@
 	width: 3px;
 	height: auto;
 	margin: 0 5px;
+	border: none;
+	border-left: 1px solid #cccfd0;
+	border-right: 1px solid #cccfd0;
 }
 .i-slider-vertical .i-slider-base {
 	width: 2px;
 	border-left: 1px solid #cbcdce;
+	border-right: none;
 	background: #f3f3f4;
+	border-top: 1px solid #cccfd0;
+	border-bottom: 1px solid #cccfd0;	
 }
 .i-slider-vertical .i-slider-handle {
 	background: transparent url(img/handle-vertical.png);
